--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :genre_id %><br>
-    <%= f.text_field :genre_id %>
+    <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "Select a genre"} %>
   </div>
   <div class="actions">
     <%= f.submit %>
