--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -15,7 +15,7 @@
     <% @artists.each do |artist| %>
       <tr>
         <td><%= artist.name %></td>
-        <td><%= artist.genre %></td>
+        <td><%= artist.genre.try(:name) %></td>
         <td><%= link_to 'Show', artist %></td>
         <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
         <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
