--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @artist.name %>
+  <%= @artist.name.try (:name) %>
 </p>
 
 <p>
   <strong>Genre:</strong>
-  <%= @artist.genre %>
+  <%= @artist.genre.try (:name) %>
 </p>
 
 <%= link_to 'Edit', edit_artist_path(@artist) %> |
