--- a/app/views/genres/_form.html.erb
+++ b/app/views/genres/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+   <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "Select a genre"} %>
   </div>
   <div class="actions">
     <%= f.submit %>
