--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :artist_id %><br>
-    <%= f.text_field :artist_id %>
+    <%= f.label :genre_id %><br>
+    <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "Select a genre"} %>
   </div>
   <div class="actions">
     <%= f.submit %>
