--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -15,7 +15,7 @@
     <% @songs.each do |song| %>
       <tr>
         <td><%= song.title %></td>
-        <td><%= song.artist %></td>
+        <td><%= song.artist.try(:name) %></td>
         <td><%= link_to 'Show', song %></td>
         <td><%= link_to 'Edit', edit_song_path(song) %></td>
         <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
